--- a/vercel.json
+++ b/vercel.json
@@ -4,24 +4,14 @@
     {
       "src": "api/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/checkpoint1.html",
-      "dest": "/checkpoint1.html"
-    },
-    {
-      "src": "/checkpoint2.html",
-      "dest": "/checkpoint2.html"
-    },
-    {
-      "src": "/",
-      "dest": "/index.html"
-    }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
